Fixed stupid overflow stuff.

--- a/css/style.css
+++ b/css/style.css
@@ -2,8 +2,7 @@
 	background-color: #FFFFFF;
 	margin: 5px 5px 5px 5px;
 	padding: 5px 5px 5px 5px;
-	overflow-x: hidden;
-	overflow-y: scroll;
+	overflow: hidden;
     font-family: Georgia,Utopia,Charter,serif;
     width:350px;
     height:auto;
